# GPhIon

./: .gitignore  MANIFEST.in  README.md  __init__ (Copy).py  __init__.py  forme.txt  pyproject.toml  requirements.txt  setup.py
analyzers/: 1_jump_analyzer.py  __init__.py  activation_energy_analyzer.py  collective_jump_analyzer.py  corrected_jump_analyzer.py  diffusivity_analyzer (Copy).py  diffusivity_analyzer.py  jump_analyzer (Copy).py  jump_analyzer.py  rdf_analyzer.py  site_finder.py  tracer_analyzer.py  vanhove_analyzer.py  vibration_analyzer (Copy).py  vibration_analyzer.py
core/: __init__.py  coordinate_processor.py  sim_data.py
gphion/: __init__.py
gphion/analyzers/: __init__.py  activation_energy_analyzer.py  collective_jump_analyzer.py  diffusivity_analyzer.py  jump_analyzer.py  ngp_analyzer.py  rdf_analyzer.py  site_finder.py  tracer_analyzer.py  vanhove_analyzer.py  vibration_analyzer.py
gphion/core/: __init__.py  base.py  coordinate_processor.py  plot_io.py  sim_data.py  utils.py
gphion/visualization/: __init__.py  collective_plotter.py  data_driven_plotter.py  displacement_plotter.py  plotting.py  vanhove_plotter.py
gphion/workflow/: main.py
tests/: GPhion_analysis.py  OUTPUT_FILES.md  Untitled-1.py  analysis_run.ipynb  final_vha_raw.ipynb  module_check.ipynb  new.txt
visualization/: Mig_Path_Visualizer.py  __init__.py  collective_plotter.py  connectivity_plotter.py  displacement_plotter.py  mig_path_plotter.py  plotting.py
workflow/: __init__.py  main.py
