[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gphion"
dynamic = ["version", "dependencies"]
description = "Glassy Phase Ionic Conductor Analysis Package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dr. Ram Sewak", email = "ram.sewak@iitgn.ac.in"}
]
keywords = ["molecular dynamics", "ionic conductors", "diffusion", "TAOG"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["gphion", "gphion.core", "gphion.analyzers", "gphion.visualization", "gphion.workflow"]

[tool.setuptools.dynamic]
version = {attr = "gphion.__version__"}
dependencies = {file = ["requirements.txt"]}
